force-app/main/default/objects/Registered_Vehicle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registered Vehicles (Person Account)</relationshipLabel>
    <relationshipName>Registered_Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>