force-app/main/default/objects/Registered_Vehicle__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IF(ISPICKVAL(Branch__c, &apos;CCI&apos;) , &apos;MB&apos;,
    IF(ISPICKVAL(Branch__c, &apos;CCK&apos;), &apos;KIA&apos;,
        IF(ISPICKVAL(Branch__c, &apos;CCA&apos;), &apos;MIT&apos;,
            IF(ISPICKVAL(Branch__c, &apos;CCF&apos;), IF(AND(NOT(ISBLANK(Variant__r.Model_ID__r.Model_Display_Name__c)),BEGINS(Variant__r.Model_ID__r.Model_Display_Name__c,&apos;DS&apos;)), &apos;DS&apos;,&apos;CIT&apos;),&apos;&apos;))))</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>