force-app/main/default/objects/Registered_Vehicle__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipLabel>Registered Vehicles</relationshipLabel>
    <relationshipName>Registered_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>