force-app/main/default/objects/Registered_Vehicle__c/fields/DWH_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>DWH_Vehicle_ID__c</fullName>
    <externalId>true</externalId>
    <label>DWH Vehicle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>