force-app/main/default/objects/Registered_Vehicle__c/fields/Last_Battery_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Battery_Change__c</fullName>
    <label>Last Battery Change</label>
    <type>Date</type>
</CustomField>