force-app/main/default/objects/Registered_Vehicle__c/fields/Last_Service_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Booking_Date__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>