force-app/main/default/objects/Registered_Vehicle__c/fields/Last_Service_Booking_KM__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Booking_KM__c</fullName>
    <label>Last Service KM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>