force-app/main/default/objects/Registered_Vehicle__c/fields/MAGIC_FUL__c.field-meta.xml
<CustomField>
    <fullName>MAGIC_FUL__c</fullName>
    <description>Maps to MAGIC_FUL json attribute.</description>
    <inlineHelpText>Maps to MAGIC_FUL json attribute.</inlineHelpText>
    <label>MAGIC_FUL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>