force-app/main/default/objects/Registered_Vehicle__c/fields/MAGIC_MBPC__c.field-meta.xml
<CustomField>
    <fullName>MAGIC_MBPC__c</fullName>
    <description>Maps to MAGIC_MBPC json attribute.</description>
    <inlineHelpText>Maps to MAGIC_MBPC json attribute.</inlineHelpText>
    <label>MAGIC_MBPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>