force-app/main/default/objects/Registered_Vehicle__c/fields/MAGIC_MF__c.field-meta.xml
<CustomField>
    <fullName>MAGIC_MF__c</fullName>
    <description>Maps to MAGIC_MF json attribute.</description>
    <inlineHelpText>Maps to MAGIC_MF json attribute.</inlineHelpText>
    <label>MAGIC_MF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>