force-app/main/default/objects/Registered_Vehicle__c/fields/Manufacture_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Warranty_End_Date__c</fullName>
    <label>Manufacture Warranty End Date</label>
    <type>Date</type>
</CustomField>