force-app/main/default/objects/Registered_Vehicle__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <formula>Variant__r.Model_ID__r.Name</formula>
    <label>Model Name</label>
    <type>Text</type>
</CustomField>