force-app/main/default/objects/Registered_Vehicle__c/fields/Next_Recommended_Servi__c.field-meta.xml
<CustomField>
    <fullName>Next_Recommended_Servi__c</fullName>
    <label>Next Recommended Servi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>