force-app/main/default/objects/Registered_Vehicle__c/fields/Next_Service_Booking_KM__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Booking_KM__c</fullName>
    <label>Next Service Rec KM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>