force-app/main/default/objects/Registered_Vehicle__c/fields/Person_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Email__c</fullName>
    <formula>Account__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Email</label>
    <type>Text</type>
</CustomField>