force-app/main/default/objects/Registered_Vehicle__c/fields/Registered_Vehicle_Email__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle_Email__c</fullName>
    <label>Registered Email and Social ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>