force-app/main/default/objects/Registered_Vehicle__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <externalId>true</externalId>
    <label>Registration Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>