force-app/main/default/objects/Registered_Vehicle__c/fields/Self_Import_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Self_Import_Vehicle__c</fullName>
    <label>Self Import Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>