force-app/main/default/objects/Registered_Vehicle__c/fields/Signup_Channel__c.field-meta.xml
<CustomField>
    <fullName>Signup_Channel__c</fullName>
    <formula>TEXT(Contact__r.Signup_Channel__c)</formula>
    <label>Signup Channel</label>
    <type>Text</type>
</CustomField>