force-app/main/default/objects/Registered_Vehicle__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description>KIA Connect Subscription End Date</description>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>