force-app/main/default/objects/Registered_Vehicle__c/fields/Time_Lapse__c.field-meta.xml
<CustomField>
    <fullName>Time_Lapse__c</fullName>
    <formula>Signup_Date__c - Car_Collection_Date__c</formula>
    <inlineHelpText>Day(s) Different of Car Collection Date vs App Sign-Up Date</inlineHelpText>
    <label>Time Lapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>