force-app/main/default/objects/Registered_Vehicle__c/fields/Variant_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Name__c</fullName>
    <formula>LEFT(Variant__r.Name, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant Name</label>
    <type>Text</type>
</CustomField>