force-app/main/default/objects/Registered_Vehicle__c/fields/VariantName__c.field-meta.xml
<CustomField>
    <fullName>VariantName__c</fullName>
    <formula>Variant__r.Name</formula>
    <label>Variant Name</label>
    <type>Text</type>
</CustomField>