force-app/main/default/objects/Registered_Vehicle__c/fields/Vehicle_Size__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Size__c</fullName>
    <formula>TEXT(Variant__r.Model_ID__r.Vehicle_Size__c)</formula>
    <label>Vehicle Size</label>
    <type>Text</type>
</CustomField>