force-app/main/default/objects/Registered_Vehicle__c/fields/X18DigitCharSafeID__c.field-meta.xml
<CustomField>
    <fullName>X18DigitCharSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit Char Safe ID</label>
    <type>Text</type>
</CustomField>