force-app/main/default/objects/Registered_Vehicle__c/listViews/CIT_Vehicles.listView-meta.xml
<ListView>
    <fullName>CIT_Vehicles</fullName>
    <columns>Registered_Date__c</columns>
    <columns>NAME</columns>
    <columns>referral_edm_datetime__c</columns>
    <columns>Reg_plus_5days__c</columns>
    <columns>Do_not_send_Edm_Ref__c</columns>
    <columns>Branch__c</columns>
    <columns>Variant__c</columns>
    <columns>Franchise__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>CCF</value>
    </filters>
    <filters>
        <field>Reg_plus_5days__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Variant_Name__c</field>
        <operation>notEqual</operation>
        <value>DS</value>
    </filters>
    <label>CIT Vehicles</label>
</ListView>