force-app/main/default/objects/Registered_Vehicle__c/listViews/KIA_Vehicles.listView-meta.xml
<ListView>
    <fullName>KIA_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Color__c</columns>
    <columns>Contact__c</columns>
    <columns>Franchise__c</columns>
    <columns>DWH_Vehicle_ID__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Variant__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Vehicle_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>CCK</value>
    </filters>
    <label>KIA Vehicles</label>
</ListView>