force-app/main/default/objects/Registered_Vehicle__c/listViews/Register_Today.listView-meta.xml
<ListView>
    <fullName>Register_Today</fullName>
    <columns>Autoline_Franchise_Code__c</columns>
    <columns>Model_Display_name__c</columns>
    <columns>NAME</columns>
    <columns>Variant__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Registered_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Registered_Vehicle_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registered_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Register Today</label>
</ListView>